// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`validateGetAccountParams > should handle additional errors in the formattedErrors._errors array 1`] = `
[
  [InvalidRequest: Test error

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidrequesterror/
Version: 1.1.0.next-73],
]
`;

exports[`validateGetAccountParams > should return InvalidAddressError for an invalid address 1`] = `
[
  [InvalidAddress: Invalid address param. value must be a hex string

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidaddresserror/
Version: 1.1.0.next-73],
]
`;

exports[`validateGetAccountParams > should return InvalidRequestError for an invalid returnStorage parameter 1`] = `
[
  [InvalidRequest: Invalid returnStorage param. returnStorage must be a boolean or not provided.

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidrequesterror/
Version: 1.1.0.next-73],
]
`;

exports[`validateGetAccountParams > should return InvalidRequestError for an invalid throwOnFail parameter 1`] = `
[
  [InvalidRequest: Invalid throwOnFail param. throwOnFail must be a boolean or not provided. throwOnFail must be a boolean

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidrequesterror/
Version: 1.1.0.next-73],
]
`;

exports[`validateGetAccountParams > should return multiple errors for multiple invalid parameters 1`] = `
[
  [InvalidRequest: Invalid throwOnFail param. throwOnFail must be a boolean or not provided. throwOnFail must be a boolean

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidrequesterror/
Version: 1.1.0.next-73],
  [InvalidAddress: Invalid address param. value must be a hex string

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidaddresserror/
Version: 1.1.0.next-73],
  [InvalidRequest: Invalid returnStorage param. returnStorage must be a boolean or not provided.

Docs: https://tevm.sh/reference/tevm/errors/classes/invalidrequesterror/
Version: 1.1.0.next-73],
]
`;
